# Applied-NLP-Summer2026

./: main.py  pyproject.toml
.devcontainer/: devcontainer.json
Labs/Week_11/Bi-Directional/: Assignment.ipynb
Labs/Week_12/NMT/: Assignment.ipynb
Labs/Week_14/BERT/: helpers.py
Labs/Week_2/Optimization Techniques/Labs/GD_SGD/: stochastic_gradient_descent.ipynb
Labs/Week_2/Optimization Techniques/Labs/GD_SGD/.ipynb_checkpoints/: stochastic_gradient_descent-checkpoint.ipynb
Labs/Week_2/Optimization Techniques/Labs/Momentum_adam/: Momentum_ADAM_GD.ipynb
Labs/Week_2/Optimization Techniques/Labs/Momentum_adam/.ipynb_checkpoints/: Momentum_ADAM_GD-checkpoint.ipynb
Labs/Week_3/Neural Networks/: Assignment.ipynb
Labs/Week_4/Glove Word2Vec/: Assignment.ipynb
Labs/Week_5/Evaluation Techniques/: Assignment.ipynb  tests.py
Labs/Week_6/Topic Modeling/: Assignment.ipynb  Lab 1.ipynb
Labs/Week_7/Dependency Parsing/: Assignment.ipynb
Labs/Week_8/Tokenization/: Assignment.ipynb
Labs/Week_9/HMM_Ngrams/: Assignment.ipynb  Assignment_helpers.py
