[project]
name = "applied-nlp-summer2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.16.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "nbconvert>=7.17.1",
    "notebook>=7.5.6",
    "pandoc>=2.4",
    "reportlab>=4.5.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]
